--- a/index.html
+++ b/index.html
@@ -13,47 +13,86 @@
   <div class="wrapper">
     <div class="background">
       <div class="background__circle--big"></div>
+      <div class="background__circle--big2"></div>
+      <div class="background__circle--big3"></div>
     </div>
     <div class="header__container container">
       <header class="header">
         <div class="header__inner">
-          <nav class="header__nav">
-            <ul class="header__nav--list">
-              <li class="header__nav--paragraph">
-                <a id="nav-link" href="#" class="header__nav--link title-medium-16">Home</a>
-              </li>
-              <li class="header__nav--paragraph">
-                <a id="nav-link" href="#" class="header__nav--link title-medium-16">About</a>
-              </li>
-              <li class="header__nav--paragraph">
-                <a id="nav-link" href="#" class="header__nav--link title-medium-16">Reviews</a>
-              </li>
-
-              <li class="header__nav--paragraph">
-                <a id="nav-link" href="#" class="header__nav--link title-medium-16">Reviews</a>
-              </li>
-
-              <li class="header__nav--paragraph">
-                <a id="nav-link" href="#" class="header__nav--link title-medium-16">Reviews</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="header__select title-medium-16 select">
-            
+          <button class="header__burger">
+            <span class="header__burger--span"></span>
+          </button>
+          <div class="header__content">
+            <button class="header__content--close"></button>
+            <div class="header__content--logo">
+              <img src="img/header/Logo.svg" alt="" class="header__content--img">
+            </div>
+            <nav class="header__nav">
+              <ul class="header__nav--list">
+                <li class="header__nav--paragraph">
+                  <a id="nav-link" href="#" class="header__nav--link title-medium-16">Home</a>
+                </li>
+                <li class="header__nav--paragraph">
+                  <a id="nav-link" href="#" class="header__nav--link title-medium-16">About</a>
+                </li>
+                <li class="header__nav--paragraph">
+                  <a id="nav-link" href="#" class="header__nav--link title-medium-16">Reviews</a>
+                </li>
+                <li class="header__nav--paragraph">
+                  <a id="nav-link" href="#" class="header__nav--link title-medium-16">FAQ</a>
+                </li>
+  
+              </ul>
+            </nav>
+            <div class="header__select title-medium-16 select"></div>
+            <button class="header__button button">Login</button>
           </div>
-          <button class="header__button button">Login</button>
+          <h1 class="header__logo">
+            <a href="/" class="header__logo--link">
+              <img src="./img/header/Logo.svg" alt="">
+            </a>
+          </h1>
         </div>
       </header>
     </div>
-    <main>
-      <div class="main">
-        <div class="main__container container">
-          <div class="main__title"></div>
-        </div>
-      </div>
+    <main class="main">
+
     </main>
     <footer class="footer">
-
+      <div class="footer__container container">
+        <div class="footer__inner">
+          <ul class="footer__list">
+            <li class="footer__paragraph">
+              <a href="https://t.me/@Swappy_bot" class="footer__paragraph--imgbox">
+                <img src="img/footer/Telegram.svg" alt="#" class="footer__paragraph--img">
+              </a>
+              <h5 class="footer__paragraph--title text-regular-16">Telegram</h5>
+              <a href="https://t.me/@Swappy_bot" class="footer__paragraph--text title-medium-16 ellipsis">@Swappy_bot</a>
+            </li>
+            <li class="footer__paragraph">
+              <a href="" class="footer__paragraph--imgbox">
+                <img src="img/footer/Location.svg" alt="#" class="footer__paragraph--img">
+              </a>
+              <h5 class="footer__paragraph--title text-regular-16">Address</h5>
+              <a href="" class="footer__paragraph--text title-medium-14 ellipsis">70 Bowman St. South Windsor, CT 06074</a>
+            </li>
+            <li class="footer__paragraph">
+              <a href="tel:+19032532535" class="footer__paragraph--imgbox">
+                <img src="img/footer/Phone.svg" alt="#" class="footer__paragraph--img">
+              </a>
+              <h5 class="footer__paragraph--title text-regular-16">Phone</h5>
+              <a href="tel:+19032532535" class="footer__paragraph--text title-medium-14 ellipsis">+19032532535</a>
+            </li>
+            <li class="footer__paragraph">
+              <a href="mailto:swappybot@gmail.com" class="footer__paragraph--imgbox">
+                <img src="img/footer/Mail.svg" alt="#" class="footer__paragraph--img">
+              </a>
+              <h5 class="footer__paragraph--title text-regular-16">Email</h5>
+              <a href="mailto:swappybot@gmail.com" class="footer__paragraph--text title-medium-14 ellipsis">swappybot@gmail.com</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </div>
   
