--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </header>
     </div>
     <main class="main">
-      <section class="advantages">
+      <!-- <section class="advantages">
         <div class="advantages__container container">
           <div class="advantages__inner">
             <h3 class="advantages__title title">Advantage</h3>
@@ -104,7 +104,7 @@
             </ul>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer class="footer">
       <div class="footer__container container">
