--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
   <div class="wrapper">
-    <div class="background">
+    <!-- <div class="background">
       <div class="background__circle--big"></div>
       <div class="background__circle--big2"></div>
       <div class="background__circle--big3"></div>
-    </div>
+    </div> -->
     <div class="header__container container">
       <header class="header">
         <div class="header__inner">
