--- a/index.html
+++ b/index.html
@@ -18,7 +18,41 @@
     </div> -->
     <div class="header__container container">
       <header class="header">
-        
+        <div class="header__inner">
+          <button id="burger-open" class="header__burger">
+            <span class="header__burger--span"></span>
+          </button>
+          <div data-media="991" id="header-sidebar" class="header__content">
+            <button id="burger-close" class="header__content--close"></button>
+            <div class="header__content--logo">
+              <img src="img/header/Logo.svg" alt="" class="header__content--img">
+            </div>
+            <nav class="header__nav">
+              <ul class="header__nav--list">
+                <li class="header__nav--paragraph">
+                  <a id="nav-link" href="#" class="header__nav--link title-medium-16">Home</a>
+                </li>
+                <li class="header__nav--paragraph">
+                  <a id="nav-link" href="#" class="header__nav--link title-medium-16">About</a>
+                </li>
+                <li class="header__nav--paragraph">
+                  <a id="nav-link" href="#" class="header__nav--link title-medium-16">Reviews</a>
+                </li>
+                <li class="header__nav--paragraph">
+                  <a id="nav-link" href="#" class="header__nav--link title-medium-16">FAQ</a>
+                </li>
+  
+              </ul>
+            </nav>
+            <div class="header__select title-medium-16 select"></div>
+            <button class="header__button button">Login</button>
+          </div>
+          <h1 class="header__logo">
+            <a href="/" class="header__logo--link">
+              <img src="./img/header/Logo.svg" alt="">
+            </a>
+          </h1>
+        </div>
       </header>
     </div>
     <main class="main">
